# fastapi_tryfpet_project

./: .gitignore  README.md  alembic.ini  docker-compose.yaml  main.py  pyproject.toml  pytest.ini  run.py  settings.py
app/: config.py  main.py
app/api/: dependencies.py
app/api/v1/: __init__.py  users.py
app/core/: exceptions.py  security.py
app/db/: __init__.py  base.py  session.py
app/models/: account.py  transaction.py  user.py
app/repositories/: __init__.py  base.py  user.py
app/schemas/: __init__.py  user.py
app/services/: __init__.py  user.py
migrations/: env.py
migrations/versions/: 6275e7e4328b_initial_migration.py  c0aad8386173_change_user_model.py
tests/: conftest.py  test_api.py  test_repositories.py  test_security.py  test_services.py
