[project]
name = "finflow"
version = "0.1.0"
description = "FinFlow is microservice banking application based on FastAPI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.2",
    "asyncpg>=0.31.0",
    "fastapi>=0.124.0",
    "psycopg2-binary>=2.9.11",
    "pydantic[email]>=2.12.5",
    "pydantic-settings>=2.12.0",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
    "passlib>=1.7.4",
    "python-jose>=3.5.0",
    "pytest>=9.0.2",
    "httpx>=0.28.1",
    "bcrypt>=5.0.0",
    "pytest-asyncio>=1.3.0",
    "aiosqlite>=0.21.0",
    "argon2>=0.1.10",
    "argon2-cffi>=25.1.0",
]
